# reinsurance

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/reinsurance/: __init__.py
src/reinsurance/layers/: core.py  non_proportional.py  proportional.py
src/reinsurance/models/: model.py
